Table user {
  id int [pk]
  username varchar(25) [unique]
  password varchar(255)
  email varchar(320) [unique]
  created_at datetime [default: `now()`]
  updated_at datetime
  isDeleted tinyint
}

Table userInfo {
  id int [pk]
  user_id int [ref: - user.id]
  image_id int [ref: - image.id]
  category_id int [ref: < category.id]
  created_at datetime [default: `now()`]
  updated_at datetime
  isDeleted tinyint
}

Table user_favourite_location {
  user_id int [ref: - user.id]
  location_id int [ref: - location.id]
  created_at datetime [default: `now()`]

  indexes {
    (user_id, location_id) [unique]
  }
}

Table user_favourite_event {
  user_id int [ref: - user.id]
  event_id int [ref: - event.id]
  created_at datetime [default: `now()`]

  indexes {
    (user_id, event_id) [unique]
  }
}

Table group {
  id int [pk]
  name varchar(50)
  image_id int [ref: - image.id]
  description varchar(500)
  memebers_id_JSON text
  created_by int [ref: - user.id]
  created_at datetime [default: `now()`]
  updated_at datetime
  isDeleted tinyint
}

Table location {
  id int [pk]
  name varchar(50)
  location varchar(50)
  description varchar(500)
  image_id int [ref: < image.id]
  category int [ref: < category.id]
  rating dec(1,1)
  created_by int [ref: - user.id]
  isApproved tinyint
  created_at datetime [default: `now()`]
  updated_at datetime
  isDeleted tinyint
}

Table event {
  id int [pk]
  location_id int [ref: - location.id]
  time datetime
  created_by int [ref: - user.id]
  created_at datetime [default: `now()`]
  updated_at datetime
  isDeleted tinyint
}

Table category {
  id int [pk]
  name varchar(50)
  image_id int [ref: - image.id]
}

Table image {
  id int [pk]
  name varchar(25)
  path varchar(150)
  created_at datetime [default: `now()`]
  isDeleted tinyint
}

Table location_review {
  id int [pk]
  user_id int [ref: - user.id]
  location_id int [ref: - location.id]
  created_at datetime [default: `now()`]
  updated_at datetime
  isDeleted tinyint
}

Table event_review {
  id int [pk]
  user_id int [ref: - user.id]
  event_id int [ref: - event.id]
  created_at datetime [default: `now()`]
  updated_at datetime
  isDeleted tinyint
}
